--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>LearningJava</groupId>
-  <artifactId>LearningJava</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
+  <groupId>CardCreator</groupId>
+  <artifactId>CardCreator</artifactId>
+  <version>1.0</version>
+  <packaging>war</packaging>
   <dependencies>
     <dependency>
 		<groupId>junit</groupId>
